environments/02-smarttestingservice.yml
apiVersion: v1
kind: Service
metadata:
  name: pythonwebapp-svc
spec:
  selector:
    app: pythonwebapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
