environments/03-smarttestingingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pythonwebapp-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: pythonwebapp-svc
            port:
              number: 8000
        pathType: Exact
